created my own test files

--- a/pandas/Practice.ipynb
+++ b/pandas/Practice.ipynb
@@ -2,22 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['.ipynb_checkpoints',\n",
+       " 'Practice.ipynb',\n",
+       " 'souvik_pandas_practice.ipynb',\n",
        " 'supermarkets-commas.txt',\n",
        " 'supermarkets-semi-colons.txt',\n",
        " 'supermarkets.csv',\n",
        " 'supermarkets.json',\n",
        " 'supermarkets.xlsx',\n",
-       " 'Untitled.ipynb']"
+       " 'test.py',\n",
+       " 'test1.py']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +161,7 @@
        "6          20  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3913,7 +3916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
