--- a/pandas/Practice.ipynb
+++ b/pandas/Practice.ipynb
@@ -2,25 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['.ipynb_checkpoints',\n",
-       " 'Practice.ipynb',\n",
-       " 'souvik_pandas_practice.ipynb',\n",
        " 'supermarkets-commas.txt',\n",
        " 'supermarkets-semi-colons.txt',\n",
        " 'supermarkets.csv',\n",
        " 'supermarkets.json',\n",
        " 'supermarkets.xlsx',\n",
-       " 'test.py',\n",
-       " 'test1.py']"
+       " 'Untitled.ipynb']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +158,7 @@
        "6          20  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3916,7 +3913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
